--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -296,6 +296,7 @@
                         </div>
                     </form>
                 </div>
+                <div class="search_mask"></div>
             </div>
         </div>
 
