--- a/amadeus/static/css/themes/contrast.sass
+++ b/amadeus/static/css/themes/contrast.sass
@@ -420,6 +420,9 @@ fieldset[disabled][disabled] .input-group-btn .btn
 .search-responsive-collapse #btn-search,
 .search-responsive-collapse .top-search
     color: $secondary-white
+
+.search-responsive-collapse .search_mask
+    background: #000000
 /* --- End Minor Screens --- */
 
 /* === End Topbar === */
