--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -296,6 +296,9 @@ body .container-fluid .well-inverse
 .search-responsive-collapse #btn-search,
 .search-responsive-collapse .top-search
     color: $primary-color
+
+.search-responsive-collapse .search_mask
+    background: #000000
 /* --- End Minor Screens --- */
 
 /* === End Topbar === */
