--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -33,10 +33,10 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/jPages.css' %}">
 
- 		<script src="{% static 'js/cropper.min.js' %}"></script> <!-- Js for cropper-->
-		<link href="{% static 'css/cropper.min.css' %}" rel="stylesheet"> <!-- CSS for cropper-->
+	<script src="{% static 'js/cropper.min.js' %}"></script> <!-- Js for cropper-->
+	<link href="{% static 'css/cropper.min.css' %}" rel="stylesheet"> <!-- CSS for cropper-->
 
-		<script type="text/javascript" src="{% static 'js/printThis.js' %}"></script> <!-- Print this plugin js-->
+	<script type="text/javascript" src="{% static 'js/printThis.js' %}"></script> <!-- Print this plugin js-->
 
 
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
@@ -266,6 +266,7 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="menu_mask"></div>
                 </div>
                 <div class="col-sm-4 col-xs-4">
                     <a class="" href="{% url 'subjects:home' %}">
