--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -230,6 +230,9 @@ input#mobile_menu_btn:checked + .navbar-menu-btn {
 .mobile_menu_navbar .navbar-nav > li > a:hover {
   color: #FFFFFF; }
 
+.menu_mask {
+  background: #000000; }
+
 /* === End Mobile Menu === */
 /* === Sidebar === */
 #sidebar-menu .item {
