--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -322,6 +322,9 @@ input#mobile_menu_btn:checked + .navbar-menu-btn
 .mobile_menu_navbar .navbar-nav>li>a:focus, 
 .mobile_menu_navbar .navbar-nav>li>a:hover
     color: $secondary-white
+
+.menu_mask
+    background: #000000
 /* === End Mobile Menu === */
 
 
