--- a/pdf_file/templates/pdf_file/view.html
+++ b/pdf_file/templates/pdf_file/view.html
@@ -33,23 +33,24 @@
         <div class="panel panel-info topic-panel-invisible">
             <div class="panel-heading panel-invisible">
     {% endif %}
-		<div class="row">
-            <div class="col-md-12 category-header">
-                <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                    <span>{{pdf_file}}</span>
-                </h4>
+    		<div class="row">
+                <div class="col-md-12 category-header">
+                    <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
+                        <span>{{pdf_file}}</span>
+                    </h4>
 
-                <div class="col-md-5 pull-right category-card-items">
-                    <a href="{% url 'mural:resource_view' pdf_file.slug %}" class="pull-right action_icon">
-                        <i class="fa fa-list" aria-hidden="true"></i>
-                        {% resource_mural_number pdf_file request.user %}
-                    </a>
+                    <div class="col-md-5 pull-right category-card-items">
+                        <a href="{% url 'mural:resource_view' pdf_file.slug %}" class="pull-right action_icon">
+                            <i class="fa fa-list" aria-hidden="true"></i>
+                            {% resource_mural_number pdf_file request.user %}
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
+        <object width="100%" height="800px" type="application/pdf" data="{{pdf_file.file.url}}" id="pdf_content">
+            <iframe id="pdfviewer" src="https://docs.google.com/gview?embedded=true&url={{ absolute_url }}" frameborder="0" width="100%" height="800px"></iframe>
+            {# <p>{% trans "PDF could not be displayed" %}</p> #}
+        </object>
     </div>
-    <object width="100%" height="800px" type="application/pdf" data="{{pdf_file.file.url}}" id="pdf_content">
-        <iframe id="pdfviewer" src="https://docs.google.com/gview?embedded=true&url={{ absolute_url }}" frameborder="0" width="100%" height="800px"></iframe>
-        {# <p>{% trans "PDF could not be displayed" %}</p> #}
-    </object>
 {% endblock content %}
