--- a/categories/templates/categories/_form.html
+++ b/categories/templates/categories/_form.html
@@ -63,8 +63,14 @@
 			</div>
 		{% endif %}
 	{% endfor %}
-	<div class="row text-center">
-		<input type="submit" value="{% trans 'Save' %}" class="btn btn-success btn-raised" />
+	<div class="row">
+		<div class="col-lg-2 col-md-offset-4 col-md-6 col-sm-12 col-xs-12 text-center">
+			<input type="submit" value="{% trans 'Save' %}" class="btn btn-success btn-raised btn-block" />
+		</div>
+
+		<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12 text-center">
+			<a href="{% url 'home' %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
+		</div>
 	</div>
 </form>
 
