--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -87,7 +87,7 @@
 
         if (array.length > 1) {
             new_lang += '-';
-            new_lang += array[1].toUpperCase();            
+            new_lang += array[1].toUpperCase();
         }
 
     </script>
@@ -205,7 +205,7 @@
                 </ul>
             </div>
         </div>
-		
+
         <!-- Mobile Menu -->
         <div class="navbar navbar-default hidden-lg hidden-md">
             <div class="navbar-header">
@@ -366,23 +366,25 @@
                             <a href="{% url 'dashboards:view_general' %}"><i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i></a>
                         </li>
                     </ul>
-                {% endblock %}           
+                {% endblock %}
             </div>
 
             <div id="page_content" class="col-xs-12 col-sm-12 col-md-11 col-lg-11">
+							<div class="dropdown dropdown_crumb">
                 {% block breadcrumbs %}
                     {% breadcrumb 'Home' 'home' %}
                 {% endblock %}
+								<div class="drop_change" style="width:100%">
                 {% block render_breadcrumbs %}
                     {% render_breadcrumbs %}
                 {% endblock %}
-                
+								</div>
+							</div>
                 {% block content %}
                 {% endblock %}
             </div>
         </div>
     </div>
-
     {% block footer %}
     {% endblock %}
 
