Adding cancel button in resouces forms

--- a/categories/templates/categories/_form.html
+++ b/categories/templates/categories/_form.html
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12 text-center">
-			<a href="{% url 'home' %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
+			<a href="{% url 'categories:index' %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
 		</div>
 	</div>
 </form>
