--- a/pdf_file/templates/pdf_file/_form.html
+++ b/pdf_file/templates/pdf_file/_form.html
@@ -353,9 +353,13 @@
 		{% endif %}
 	</div>
 
-	<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-		<div class="text-center">
-			<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
+	<div class="row">
+		<div class="col-lg-2 col-md-offset-4 col-md-6 col-sm-12 col-xs-12 text-center">
+			<input type="submit" value="{% trans 'Save' %}" class="btn btn-success btn-raised btn-block" />
+		</div>
+
+		<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12 text-center">
+			<a href="{% url 'subjects:topic_view' slug=subject.slug topic_slug=topic.slug %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
 		</div>
 	</div>
 </form>
