--- a/subjects/templates/subjects/_form.html
+++ b/subjects/templates/subjects/_form.html
@@ -93,7 +93,7 @@
 		</div>
 
 		<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12 text-center">
-			<a href="{% url 'home' %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
+			<a href="{% url 'subjects:index' %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
 		</div>
 	</div>
 </form>
