--- a/topics/templates/topics/_form.html
+++ b/topics/templates/topics/_form.html
@@ -53,7 +53,7 @@
 		</div>
 
 		<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12 text-center">
-			<a href="{% url 'home' %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
+			<a href="{% url 'subjects:view' subject.slug %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
 		</div>
 	</div>
 </form>
