--- a/amadeus/static/css/themes/contrast.sass
+++ b/amadeus/static/css/themes/contrast.sass
@@ -505,6 +505,11 @@ input#mobile_menu_btn:checked + .navbar-menu-btn
 .breadcrumb > li 
     color: $secondary-white
 
+.breadcrumb > li + li:last-child::before 
+    color: $secondary-white
+
+.bread_mask
+    background: #000000
 /* === End Breadcrumbs === */
 
 
