--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -280,6 +280,81 @@
     	width: 50px;
 	}
 
+	/* Breadcrumb */
+	.breadcrumb {
+		position: relative;
+		z-index: 3;
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+		transform: rotate(180deg);
+	}
+
+	.breadcrumb .divider {
+		display: inline-block;
+	}
+
+	.breadcrumb > li {
+		display: inherit;
+		-webkit-transform: rotate(-180deg);
+		-moz-transform: rotate(-180deg);
+		-ms-transform: rotate(-180deg);
+		-o-transform: rotate(-180deg);
+		transform: rotate(-180deg);
+	}
+
+	.breadcrumb > li + li:before {
+		display: none;
+	}
+
+	.breadcrumb > li + li:last-child::before {
+		display: inline-block;
+		padding: 0 5px;
+	    content: "\232A";
+	    font-size: 15px;
+	    font-style: normal;
+	    -webkit-transition: all 200ms linear;
+		-moz-transition: all 200ms linear;
+		-ms-transition: all 200ms linear;
+		-o-transition: all 200ms linear;
+	    transition: all 200ms linear;
+	}
+
+	.breadcrumb > li:not(:last-child) {
+		display: none;
+	}
+
+	.bread_label {
+		width: 100%;
+	}
+
+	.bread_mask {
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		opacity: .7;
+		left: 0px;
+		top: 0px;
+		display: none;
+	}
+
+	input#mobile_breadcrumb_btn:checked ~ .bread_label .breadcrumb > li + li:last-child::before {
+		-webkit-transform: rotate(90deg);
+		-moz-transform: rotate(90deg);
+		-ms-transform: rotate(90deg);
+		-o-transform: rotate(90deg);
+		transform: rotate(90deg);	
+	}
+
+	input#mobile_breadcrumb_btn:checked ~ .bread_label .breadcrumb > li:not(:last-child) {
+		display: inherit;
+	}
+
+	input#mobile_breadcrumb_btn:checked ~ .bread_mask {
+		display: inherit;
+	}
 	/* Mobile Menu */
 	.navbar-toggle{
 		display: inherit;
@@ -287,7 +362,7 @@
 		padding:10px;
 	}
 
-	#mobile_menu_btn, #mobile_search_btn {
+	#mobile_menu_btn, #mobile_search_btn, #mobile_breadcrumb_btn {
 		clip: rect(0,0,0,0);
     	position: absolute;
 	}
