Adjusting pendencies responsive bug

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -97,6 +97,9 @@
 	#printButton {
 		top:1.3em;
 	}
+	#core-subjects-options-div{
+		font-size: 10px;
+	}
 	.language-selector-on-header .no-title{
 		display:none;
 	}
