Adjusting subject card period dates

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -102,6 +102,10 @@
 	}
 	/* End Buttons */
 
+	.subject-period {
+		font-size: 12px;
+	}
+
 	.navbar .project_name{
 		display: block !important;
 	}
