--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -58,7 +58,7 @@
             <input type="hidden" class="log_id" value="" />
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     {% if subject.professor.all|length > 0  %}
                         <h4><b>{% trans "Professor(s) " %}: </b>
                             {{ subject.professor.all|join:', ' }}
@@ -67,11 +67,11 @@
                         <h4> {% trans "It doesn't possess professors" %} </h4>
                     {% endif %}
                 </div>
-                <div class="col-xs-6 col-md-3">
-                    <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
+                <div class="col-xs-6 col-md-3 subject-period">
+                    <p><b>{% trans "Beginning" %}:</b> {{ subject.init_date|date:"SHORT_DATE_FORMAT" }} </p>
                 </div>
-                <div class="col-xs-6 col-md-3">
-                    <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
+                <div class="col-xs-6 col-md-3 subject-period">
+                    <p><b>{% trans "End" %}:</b> {{ subject.end_date|date:"SHORT_DATE_FORMAT" }}</p>
                 </div>
                 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
