Adjusting mural display in mobile

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -106,6 +106,10 @@
 		font-size: 12px;
 	}
 
+	.mural .mural-list {
+		padding: 0px;
+	}
+
 	.navbar .project_name{
 		display: block !important;
 	}
