--- a/mural/templates/mural/list.html
+++ b/mural/templates/mural/list.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="col-md-12 cards-content mural" data-url="{% url 'mural:manage_general' %}" data-pages="{{ paginator.num_pages }}" data-page="{{ page_obj.number }}" data-fav="{{ favorites }}" data-mine="{{ mines }}">
-        <div class="col-sm-12 col-xs-12 visible-xs visible-sm" style="padding-left: 0px">
+        <div class="col-sm-12 col-xs-12 visible-xs visible-sm" style="padding: 0px">
             <div class="post-filter post-filter-small">
                 <h4>{% trans 'Filter' %}</h4>
 
