--- a/mural/templates/mural/list_subject.html
+++ b/mural/templates/mural/list_subject.html
@@ -69,7 +69,7 @@
                                 <input type="hidden" class="log_id" value="" />
 
                                 <div class="col-md-12 cards-content mural" data-url="{% url 'mural:load_subject' subject.id %}">
-                                    <div class="col-sm-12 col-xs-12 visible-xs visible-sm" style="padding-left: 0px">
+                                    <div class="col-sm-12 col-xs-12 visible-xs visible-sm" style="padding: 0px">
                                         <div class="post-filter post-filter-small">
                                             <h4>{% trans 'Filter' %}</h4>
 
