--- a/chat/templates/chat/list_participants.html
+++ b/chat/templates/chat/list_participants.html
@@ -34,7 +34,7 @@
                             </form>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12">
-                            <a href="{% url 'chat:participants_general' %}" class="pull-right btn btn-default btn-raised btn-md">{% trans 'List all participants' %}</a>
+                            <a href="{% url 'chat:participants_general' %}" class="pull-right btn btn-default btn-raised btn-md btn-mobile visible-xs-block visible-sm-block">{% trans 'List all participants' %}</a>
                         </div>
     	    		</div>
         		</div>
