--- a/mural/templates/mural/_view_comment.html
+++ b/mural/templates/mural/_view_comment.html
@@ -19,18 +19,18 @@
 
                         <br clear="all" />
 
-                        <div class="col-md-3 col-sm-3 user-img">
+                        <div class="col-md-3 col-sm-3 col-xs-3 user-img">
                             <img src="{{ comment.user.image_url }}" class="img-responsive" />
                         </div>
-                        <div class="col-md-9 col-sm-9 user-info">
+                        <div class="col-md-9 col-sm-9 col-xs-9 user-info">
                             <h4><a class="status {{ status }}" data-toggle="tooltip" title="{{ status|status_text }}"></a> {{ comment.user }}</h4>
                         </div>
                     </div>
                     <div class="popover-footer">
-                        <a href="#" onclick="getModalInfo($(this), '{{ comment.post|chat_space }}', '{{ comment.post|chat_space_type }}'); return false;" data-url='{% url "chat:profile" comment.user.email %}' class="btn btn-default btn-sm btn-raised pull-left">
+                        <a href="#" onclick="getModalInfo($(this), '{{ comment.post|chat_space }}', '{{ comment.post|chat_space_type }}'); return false;" data-url='{% url "chat:profile" comment.user.email %}' class="btn btn-default btn-raised pull-left btn-popover-mobile">
                             {% trans 'See Profile' %}
                         </a>
-                        <a href="#" onclick="getModalInfo($(this), '{{ comment.post|chat_space }}', '{{ comment.post|chat_space_type }}'); return false;" data-url='{% url "chat:talk" comment.user.email %}' class="btn btn-success btn-sm btn-raised pull-right">
+                        <a href="#" onclick="getModalInfo($(this), '{{ comment.post|chat_space }}', '{{ comment.post|chat_space_type }}'); return false;" data-url='{% url "chat:talk" comment.user.email %}' class="btn btn-success btn-raised pull-right btn-popover-mobile">
                             {% trans 'Send Message' %}
                         </a>
                     </div>
